--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" href="content/pages/icon-apache.png" />
     <link href="sbadmin2-1.0.7/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <script src="lib/VSS.SDK.min.js"></script>
-    
+
     <script type="text/javascript">
         VSS.init({ 
             usePlatformScripts: true, 
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </div>
-    <script src="sbadmin2-1.0.7/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="sbadmin2-1.0.7/vendor\jquery\jquery.min.js"></script>
     <script src="sbadmin2-1.0.7/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="sbadmin2-1.0.7/bower_components/flot/excanvas.min.js"></script>
     <script src="sbadmin2-1.0.7/bower_components/flot/jquery.flot.js"></script>
